--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3",
+    "vue-router": "^4.0.13",
     "vue3-markdown-it": "^1.0.10"
   },
   "devDependencies": {
@@ -29,10 +29,10 @@
     "autoprefixer": "^10.4.14",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7",
     "execa": "latest",
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^4.0.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   },
   "eslintConfig": {
     "root": true,
